[package]
name = "se-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^3.2.14", features = ["derive"]}
anyhow = "^1.0"

# Lazy initialization
once_cell = "^1.13.0"

ctrlc = "^3.2.2"

serde = { version = "^1.0.140", features = ["derive"] }

serde_json = "^1.0.82"

# dotenvy
dotenvy = "0.15.1"

